# ArgusWeb

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_incremental_crawl_index.py  003_phase3_schedules.py  004_production_foundation.py
docs/: ARCHITECTURE.md  DATABASE_ER.md  DESIGN_DECISIONS.md  KAFKA_EVENT_FLOW.md  ROADMAP.md
docs/adr/: 001-clean-architecture.md  002-kafka-delivery-semantics.md  003-job-url-accounting.md
docs/interview/: CRAWL_ENGINE.md  DATA_MODEL.md  KAFKA_PIPELINE.md
frontend/dashboard/: Dockerfile  index.html  nginx.conf  package.json
frontend/dashboard/src/: App.tsx  index.css
frontend/dashboard/src/api/: client.ts
frontend/dashboard/src/pages/: HomePage.tsx  JobsPage.tsx  NewJobPage.tsx  SchedulesPage.tsx  SearchPage.tsx  StatsPage.tsx
infra/grafana/provisioning/alerting/: contact-points.yml  rules.yml
infra/grafana/provisioning/dashboards/: argus-overview.json  dashboards.yml
infra/otel/: otel-collector.yaml
infra/prometheus/: prometheus.yml
scripts/: benchmark.py
services/api/: pyproject.toml
services/api/src/api/: main.py
services/cleaner/: pyproject.toml
services/cleaner/src/cleaner/: main.py
services/crawler/: pyproject.toml
services/crawler/src/crawler/: main.py
services/dlq_replay/: pyproject.toml
services/dlq_replay/src/dlq_replay/: main.py
services/parser/: pyproject.toml
services/parser/src/parser/: main.py
services/retry/: pyproject.toml
services/retry/src/retry/: main.py
services/scheduler/: pyproject.toml
services/scheduler/src/scheduler/: main.py
tests/fixtures/: sample.html
tests/integration/: test_jobs_api.py  test_pipeline.py  test_retry_flow.py  test_search_api.py
tests/unit/: test_content_hash.py  test_crawl_progress.py  test_events.py  test_extraction.py  test_idempotency.py  test_kafka_client.py  test_parser.py  test_proxy.py  test_rate_limit.py  test_retry.py  test_robots.py  test_scheduler_cron.py  test_search.py  test_url_utils.py
