[project]
name = "argus"
version = "0.1.0"
description = "Production-grade distributed web crawler and data extraction platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "argus-core",
    "argus-events",
]

[tool.uv.sources]
argus-core = { workspace = true }
argus-events = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/argus-core",
    "packages/argus-events",
    "packages/argus-observability",
    "services/scheduler",
    "services/crawler",
    "services/parser",
    "services/cleaner",
    "services/api",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [
    "packages/argus-core/src",
    "packages/argus-events/src",
    "packages/argus-observability/src",
]
markers = [
    "integration: integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
