[project]
name = "argus-cleaner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "argus-core",
    "argus-events",
    "argus-observability",
    "aiokafka>=0.10",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "prometheus-client>=0.20",
]

[tool.uv.sources]
argus-core = { workspace = true }
argus-events = { workspace = true }
argus-observability = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cleaner"]
