[project]
name = "argus-scheduler"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "argus-core",
    "argus-events",
    "argus-observability",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiokafka>=0.10",
    "redis[hiredis]>=5.0",
    "apscheduler>=3.10",
]

[tool.uv.sources]
argus-core = { workspace = true }
argus-events = { workspace = true }
argus-observability = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scheduler"]
